...

You should have received a copy of the GNU General Public License
along with  Delern.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_out">Sign Out</string>
    <string name="logo_image_view">Logo Image</string>

    <!-- Invitation messages -->
    <string name="invite_menu_label">Invite Friends</string>
    <string name="invitation_title">Delern Invite</string>
    <string name="invitation_email_html_content" tools:ignore="TypographyQuotes"><![CDATA[<!DOCTYPE html>
...
        Google+: <a href="https://plus.google.com/communities/104603840044649051798">https://plus.google.com/communities/104603840044649051798</a><br/>
        Twitter: <a href="https://twitter.com/dasdelern">https://twitter.com/dasdelern</a>
    </body>
</html>]]></string>
    <string name="invite_user_sharing_deck_message">This user hasn\'t installed Delern yet. Do you want to sent an invite?</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="invite">Invite</string>
    <string name="deck_menu_description">Menu for operations with decks and cards</string>
    <string name="flip_the_card_message">Flip the card</string>
    <string name="number_of_cards">Number of cards: %d</string>
    <string name="card_watched_text">Watched: %d</string>

    <!-- Deck menu -->
    <string name="deck_settings_menu">Settings</string>
    <string name="edit_cards_deck_menu">Edit cards</string>
    <string name="deck_share_menu">Share</string>

    <!-- Deck Sharing -->
    <string name="sharing_imageview_description">Sharing options</string>
    <string name="share_people_textview">People</string>
    <string name="can_edit_text">Can Edit</string>
    <string name="can_view_text">Can View</string>
    <string name="no_access_text">No Access</string>
    <string name="owner_access_text">Owner</string>
    <string-array name="share_permissions_spinner_text">
        <item>@string/can_edit_text</item>
        <item>@string/can_view_text</item>
    </string-array>
...
    <string name="add_extra_reversed_card_message">2 cards are added</string>
    <string name="deck">Deck</string>
    <string name="delete_deck">Delete deck with all cards?</string>
    <string name="back_side_card_hint">Back side</string>
    <string name="front_side_card_hint">Front side</string>
    <string name="install_contact_app_user_message">Please install Contacts App</string>
    <string name="add_cards_with_read_access_user_warning">You cannot add cards with a read access.</string>
    <string name="edit_cards_with_read_access_user_warning">You cannot edit card with a read access.</string>
    <string name="delete_cards_with_read_access_user_warning">You cannot delete card with a read access.</string>
    <string name="share_cards_with_no_access_user_warning">Only owner of deck can share it.</string>
    <string name="not_all_data_loaded_user_warning">Not all data loaded. Please try later</string>

    <!-- Cards type spinner -->
    <string name="cards_type">Deck Type</string>
    <string-array name="deck_type_spinner">
        <item>Basic</item>
...
