<!--
Copyright (C) 2017 Katarina Sheremet

This file is part of Delern.

Delern is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
any later version.

Delern is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with  Delern.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.dasfoo.delern.previewcard.PreEditCardActivity">
    <item
        android:id="@+id/delete_card_menu"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_black_24dp" />
</menu>
