...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/front_side_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/back_side_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <Button
        android:id="@+id/add_card_to_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add"/>

</LinearLayout>
</FrameLayout>
...
